# GoLA

./: .gitignore  CMakeLists.txt  board.h  board.hpp  cycle.hpp  frame.hpp  game_of_life.hpp  main  main.cpp  transform.hpp
include/: cycle.hpp  cycle.tpp  frame.hpp  frame.tpp  game.hpp  game.tpp  transform.hpp  types.hpp
scripts/: convert-9-encoding.py  convert.py  converters.py  process-5x5.py  process.py  rankings.py  todo.md  utils.py
scripts/test/: convert-indices-to-map.py  process-tr.py  putcommas.py
src/: cycle.hpp  cycle.tpp  frame.hpp  frame.tpp  game.hpp  game.tpp  game_of_life.hpp  main.cpp  process_rates_and_decays.hpp
tests/: frame_tests.cpp  game_tests.cpp
